thêm ngôn ngữ tiếng việt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="rate_me">RATE</string>
     <string name="more">MORE</string>
     <string name="btn_share_app">SHARE APP</string>
+    <string name="lesson">Lesson</string>
 
 </resources>
