--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="more_app">More App</string>
     <string name="rate">Rate App</string>
     <string name="header_title">Chinese Grammar A1</string>
-    <string name="sub_header_title">\t ( Jn- En )</string>
+    <string name="sub_header_title">\t ( Cn- En )</string>
     <string name="sample_title">～なり</string>
 
     <string name="grammar">GRAMMAR</string>
